@@ -1,3 +1,7 @@
+** v4.12 25.02.2019**
+* Adjust my ActionBar appereance. Looks nice with my new Masque skin.
+* Take account the the new ItemLevel Font changes.
+
 ** v4.11 24.02.2019**
 * Forgot to change a tag in the Healer Layout.
 
