@@ -1,3 +1,7 @@
+[b][color=orange]v4.12[/color], 25.02.2019[/b][list]
+[*]Adjust my ActionBar appereance. Looks nice with my new Masque skin.
+[*]Take account the the new ItemLevel Font changes.[/list]
+
 [b][color=orange]v4.11[/color], 24.02.2019[/b][list]
 [*]Forgot to change a tag in the Healer Layout.[/list]
 
